# learningunittestinc

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
src/aroundmain/ifdefmain/: CMakeLists.txt  Makefile  README.md
src/aroundmain/ifdefmain/src/: main.c
src/ifdefmain/: CMakeLists.txt  README.md
src/ifdefmain/src/: main.c
src/ifdefmain/test/: test_main.cpp
src/unsolvedsymbols/: CMakeLists.txt  Makefile  README.md
src/unsolvedsymbols/src/: calc.c  calc.h  depend.c  depend.h  main.c
src/unsolvedsymbols/test/: CMakeLists.txt  test_calc.cpp  test_calc_with_opt.cpp
src/usemakefile/helloworld/src/: helloworld.c
